--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
 * CYF Completions
 Installation:
 
-#+begin-src shell
+#+begin_src shell
 # Navigate to the mods folder...
 cd whereever-cyf-is/Mods
 # ...and clone the repository into .vscode
 git clone https://github.com/polypoyo/cyf-completions.git .vscode
-#+end-src
+#+end_src
